# yoccoz-theorem

./: .gitignore  LICENSE  Makefile  Mlc.lean  README.md  Yoccoz.lean  check_axioms.lean  lake-manifest.json  lakefile.lean
.github/workflows/: lean_action_ci.yml
Mlc/: Yoccoz.lean
Mlc/Quadratic/Complex/: Escape.lean  Green.lean  GreenLemmas.lean  Groetzsch.lean  Puzzle.lean  PuzzleLemmas.lean
Yoccoz/: Yoccoz.lean
Yoccoz/Quadratic/Complex/: Basic.lean  Escape.lean  Green.lean  GreenLemmas.lean  Groetzsch.lean  Puzzle.lean  PuzzleLemmas.lean
docs/: Basic.tex  Escape.tex  Green.tex  GreenLemmas.tex  Groetzsch.tex  Puzzle.tex  PuzzleLemmas.tex  Yoccoz.tex  proof.tex
refs/: README.md
scripts/: generate_docs_plots.py  generate_tex.py  generate_text_docs.py  plot_3d_viz.py  plot_convergence.py  plot_green.py  plot_groetzsch.py  plot_puzzle.py  plot_yoccoz.py  pyproject.toml  replace_symbols.sh  verify_output.sh
