[project]
name = "mlc-scripts"
version = "0.1.0"
description = "Scripts for MLC project"
authors = [
    {name = "MLC"}
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
